# thesis-format-engine

./: .gitignore  README.md  pyproject.toml
docs/: PRD.md  architecture.md  rule-schema.md  template-draft-generator.md  web-ui.md
samples/: draft-merge-sample.docx  draft-merge.yaml  logical-role-draft.yaml  logical-role-patched-report.json  logical-role-patched-report.md  logical-role-patched.docx  logical-role-report.json  logical-role-report.md  logical-role-sample.docx  minimal-thesis.docx  paragraph-spacing-patched-report.json  paragraph-spacing-patched-report.md  paragraph-spacing-patched.docx  paragraph-spacing-report.json  paragraph-spacing-report.md  paragraph-spacing-sample.docx  schema-patched-report.json  schema-patched-report.md  schema-patched.docx  schema-report.json  schema-report.md  structure-patched-report.json  structure-patched-report.md  structure-patched.docx  structure-sample.docx  table-border-patched-report.json  table-border-patched.docx  table-border-sample.docx  table-cell-patched-report.json  table-cell-patched-report.md  table-cell-patched.docx  table-cell-report.json  table-cell-report.md  table-report.json  table-report.md
src/thesis_format_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/thesis_format_engine/cli/: main.py
src/thesis_format_engine/core/: parser.py
src/thesis_format_engine/detector/: engine.py
src/thesis_format_engine/models/: node.py  rule.py  style.py
src/thesis_format_engine/patcher/: engine.py
templates/: university.yaml
tests/: test_detector.py
(+8 files in other folders)
