[project]
name = "thesis-format-engine"
version = "0.1.0"
description = "Rule-driven thesis formatting inspection and repair engine for DOCX documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "jinja2>=3.1.5",
  "lxml>=5.3.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.2",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "typer>=0.15.1",
  "rich>=13.9.4",
  "uvicorn>=0.34.0"
]

[project.scripts]
thesisfix = "thesis_format_engine.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
